--- a/app.json
+++ b/app.json
@@ -4,11 +4,12 @@
     "slug": "chessbro",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/branding/logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "scheme": "chessbro",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/branding/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,12 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/branding/logo.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/branding/logo.png"
+    },
+    "plugins": ["expo-router", "expo-font"]
   }
 }
