--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-picker/picker": "2.9.0",
     "expo": "~52.0.40",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -26,6 +27,7 @@
     "react-native-chessboard": "^0.1.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
