--- a/app.json
+++ b/app.json
@@ -3,7 +3,6 @@
     "name": "chessbro",
     "slug": "chessbro",
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./assets/branding/logo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -14,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "requireFullScreen": true
     },
     "android": {
       "adaptiveIcon": {
@@ -25,6 +25,15 @@
     "web": {
       "favicon": "./assets/branding/logo.png"
     },
-    "plugins": ["expo-router", "expo-font"]
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "PORTRAIT_UP"
+        }
+      ]
+    ]
   }
 }
