--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-picker/picker": "2.9.0",
     "expo": "~52.0.40",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
+    "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-chessboard": "^0.1.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
