--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "axios": "^1.9.0",
+    "chess.js": "^1.2.0",
     "expo": "~52.0.40",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
