--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.21",
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-chessboard": "^0.1.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -37,13 +37,30 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "babel-preset-expo": "^12.0.11"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "chess.js",
+          "react-native-chessboard",
+          "react-native-fs",
+          "@fortawesome/fontawesome-svg-core",
+          "@fortawesome/free-brands-svg-icons",
+          "@fortawesome/free-regular-svg-icons",
+          "@fortawesome/free-solid-svg-icons",
+          "react-native-responsive-fontsize"
+        ]
+      }
+    }
   },
   "private": true
 }
