--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/nova-round": "^0.3.0",
     "@expo-google-fonts/varela-round": "^0.3.0",
     "@expo-google-fonts/winky-rough": "^0.3.0",
@@ -17,10 +18,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "axios": "^1.9.0",
     "chess.js": "^1.2.0",
     "expo": "~52.0.40",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.21",
@@ -39,8 +42,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.3.0",
-    "react-native-web": "~0.19.13",
-    "expo-dev-client": "~5.0.20"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
